==> EmcraftSystems/u-boot/board/diolan/lpc4350-db1/board.c <==
#define  DEBUG
#include <common.h>
#include <netdev.h>
#include <asm/arch/lpc18xx_gpio.h>
#include <asm/arch/lpc18xx_scu.h>
#include <asm/arch/lpc18xx_creg.h>
#include <asm/arch/lpc18xx_ccu.h>
#include <asm/arch/lpc18xx.h>
#include <asm/arch/lpc4350_db1_emc.h>
#define LPC18XX_EMC_AM		((EMC_SDRAM_WIDTH_32_BITS << 7) | (EMC_SDRAM_SIZE_128_MBITS << 9) |  (EMC_SDRAM_DATA_BUS_32_BITS << 14))
#define SDRAM_RAS		3
#define SDRAM_CAS		3	/* CL = 3 */
#define SDRAM_RDCFG_RD		1
#define SDRAM_T_RP		2
#define SDRAM_T_RAS		5
#define SDRAM_T_SREX		8
#define SDRAM_T_APR		1
#define SDRAM_T_DAL		5	/* 5 cycles */
#define SDRAM_T_WR		1	/* 1 cycles */
#define SDRAM_T_RC		8
#define SDRAM_T_RFC		8
#define SDRAM_T_XSR		8
#define SDRAM_T_RRD		1
#define SDRAM_T_MRD		1
#define SDRAM_REFRESH		118
#define SDRAM_REFRESH_FAST	2
#define LPC_EMC_CTRL_EN_MSK		(1 << 0)
#define LPC_EMC_DYCTRL_CE_MSK		(1 << 0)
#define LPC_EMC_DYCTRL_CS_MSK		(1 << 1)
#define LPC_EMC_DYCTRL_I_BITS		7
#define LPC_EMC_DYCTRL_I_NORMAL		0
#define LPC_EMC_DYCTRL_I_MODE		1
#define LPC_EMC_DYCTRL_I_PALL		2	/* precharge all */
#define LPC_EMC_DYCTRL_I_NOP		3	/* no operation */
#define LPC_EMC_DYRDCFG_RD_BITS	0
#define SDRAM_MODEREG_BL_BITS		0	/* Burst Length */
#define SDRAM_MODEREG_CAS_BITS		4	/* CAS Latency */
#define SDRAM_MODEREG_BL		2	/* Burst Length code */
#define SDRAM_MODEREG_CAS		3	/* CAS Latency */
#define SDRAM_MODEREG_VALUE ((SDRAM_MODEREG_BL << SDRAM_MODEREG_BL_BITS) | \
	(SDRAM_MODEREG_CAS << SDRAM_MODEREG_CAS_BITS))

int checkboard(void)
{
	printf("Board: Diolan LPC4350-DB1 rev %s\n",
		CONFIG_SYS_BOARD_REV_STR);

	return 0;
}

int dram_init(void)
{
	volatile struct lpc_emc_dy_regs *dy0;
	u32 tmp;


#ifdef CONFIG_LPC18XX_EMC_HALFCPU
	/*
	 * EMC_CLK_DIV = M4_CLK / 2
	 */
	LPC18XX_CCU1->clk_m4_emcdiv_cfg |= LPC18XX_CCU1_CLK_RUN_MSK | LPC18XX_CCU1_CLK_EMCDIV_CFG_DIV2;
	LPC18XX_CREG->creg6 |= LPC18XX_CREG_CREG6_EMCCLKSEL_MSK;
	LPC18XX_CCU1->clk_m4_emc_cfg |= LPC18XX_CCU1_CLK_RUN_MSK; 
#else
#error EMC clock set to M4_CLK/2 is not supported
#endif

	dy0 = &LPC_EMC->dy[CONFIG_SYS_RAM_CS];

	   /* Initialize EMC to interface with SDRAM */
	LPC_EMC->emcctrl = 0x00000001;   /* Enable the external memory controller */	
	LPC_EMC->emccfg = 0;

	
	/*
	 * Address mapping
	 */
	dy0->cfg = LPC18XX_EMC_AM; 	


	
	/*
	 * Configure DRAM timing
	 */
	dy0->rascas =
		(SDRAM_RAS << LPC_EMC_DYRASCAS_RAS_BITS) |
		(SDRAM_CAS << LPC_EMC_DYRASCAS_CAS_BITS);



	LPC_EMC->dy_rdcfg =
		(SDRAM_RDCFG_RD << LPC_EMC_DYRDCFG_RD_BITS);

	LPC_EMC->dy_trp  = SDRAM_T_RP;
	LPC_EMC->dy_tras = SDRAM_T_RAS;
	LPC_EMC->dy_srex = SDRAM_T_SREX;
	LPC_EMC->dy_apr  = SDRAM_T_APR;
	LPC_EMC->dy_dal  = SDRAM_T_DAL;
	LPC_EMC->dy_wr   = SDRAM_T_WR;
	LPC_EMC->dy_rc   = SDRAM_T_RC;
	LPC_EMC->dy_rfc  = SDRAM_T_RFC;
	LPC_EMC->dy_xsr  = SDRAM_T_XSR;
	LPC_EMC->dy_rrd  = SDRAM_T_RRD;
	LPC_EMC->dy_mrd  = SDRAM_T_MRD;
	
	mdelay(100);
	/*
	 * Issue SDRAM NOP (no operation) command
	 */
	LPC_EMC->dy_ctrl =
		LPC_EMC_DYCTRL_CE_MSK | LPC_EMC_DYCTRL_CS_MSK |
		(LPC_EMC_DYCTRL_I_NOP << LPC_EMC_DYCTRL_I_BITS);
	mdelay(100);

	/*
	 * Pre-charge all with fast refresh
	 */
	LPC_EMC->dy_ctrl =
		LPC_EMC_DYCTRL_CE_MSK | LPC_EMC_DYCTRL_CS_MSK |
		(LPC_EMC_DYCTRL_I_PALL << LPC_EMC_DYCTRL_I_BITS);

	LPC_EMC->dy_rfsh = SDRAM_REFRESH_FAST;
	
	mdelay(1);
	/*
	 * Set refresh period
	 */
	LPC_EMC->dy_rfsh = SDRAM_REFRESH;

	mdelay(100);

	/*
	 * Load mode register
	 */
	LPC_EMC->dy_ctrl =
		LPC_EMC_DYCTRL_CE_MSK | LPC_EMC_DYCTRL_CS_MSK |
		(LPC_EMC_DYCTRL_I_MODE << LPC_EMC_DYCTRL_I_BITS);
	


	tmp = *((volatile u32 *)(CONFIG_SYS_RAM_BASE |(SDRAM_MODEREG_VALUE << LPC18XX_EMC_MODEREG_ADDR_SHIFT)));

	udelay(100);

	/*
	 * Normal mode
	 */
	LPC_EMC->dy_ctrl = (LPC_EMC_DYCTRL_I_NORMAL << LPC_EMC_DYCTRL_I_BITS);

	/*
	 * Enable DRAM buffer
	 */
	dy0->cfg |= (LPC18XX_EMC_AM << LPC_EMC_DYCFG_AM_BITS) | LPC_EMC_DYCFG_B_MSK;
	

	/*
	 * Fill in global info with description of DRAM configuration
	 */
	gd->bd->bi_dram[0].start = CONFIG_SYS_RAM_BASE;
	gd->bd->bi_dram[0].size  = CONFIG_SYS_RAM_SIZE;

	return 0;
}
